[package]
name = "TFHE_concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = "^0.1"
concrete-commons = "^0.1"
concrete-npe = "^0.1"
concrete-core = "^0.1"
itertools = "0.9.0"
rayon = "1.5.1"
