[package]
name = "TFHE_concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = "0.1.11"
concrete-commons = "^0.1"
concrete-npe = "^0.1"
itertools = "0.9.0"
threadpool="1.0"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
